# gameserver

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  BUGS  CMakeLists.txt  Dockerfile.login  Dockerfile.world  Dockerfile.wsclient  LICENSE  Makefile  README.md  TODO  TODO-dev  bugs.txt  build_replayclient.sh  cmake_debug  cmake_release  cmake_test  dependencies.txt  eclipse_formatter.xml  gameserver_cmake  run_replayclient.sh
client/: client.py  world.py  (+2 more)
gameserver/: CMakeLists.txt  Dockerfile.wsclient  gameserver.cmake  run_wsclient.sh  wsclient.cmake
gameserver/account/: CMakeLists.txt
gameserver/account/export/: account.h
gameserver/account/export/account/: account.h
gameserver/account/src/: account.cc  account_loader.cc  account_loader.h  loader.cc  loader.h
gameserver/account/test/: CMakeLists.txt  account_test.cc
gameserver/account/test/src/: account_test.cc
gameserver/common/: CMakeLists.txt
gameserver/common/export/: creature.h  direction.h  game_position.h  item.h  position.h  thing.h
gameserver/common/export/common/: direction.h  game_position.h  item.h  thing.h
gameserver/common/test/: CMakeLists.txt
gameserver/common/test/src/: creature_test.cc  position_test.cc
gameserver/gameengine/: CMakeLists.txt
gameserver/gameengine/export/: container.h  container_id.h  game_engine.h  game_engine_queue.h  game_position.h  gameengine.h  item_position.h  player.h  player_ctrl.h  player_manager.h  playerctrl.h  protocol.h  protocol_position.h
gameserver/gameengine/src/: container.cc  container_manager.cc  container_manager.h  game_engine.cc  game_engine_queue.cc  gameengine.cc  item_manager.cc  item_manager.h  player.cc  player.h  player_manager.cc  world_factory.cc  world_factory.h  world_loader.cc  world_loader.h  world_task_queue.cc  worldtaskqueue.h
gameserver/gameengine/test/: CMakeLists.txt
gameserver/io/: CMakeLists.txt
gameserver/io/export/: account_loader.h  data_loader.h  sprite_loader.h  world_loader.h
gameserver/io/src/: account_loader.cc  data_loader.cc  file_reader.h  sprite_loader.cc  world_loader.cc
gameserver/loginserver/: CMakeLists.txt
gameserver/loginserver/src/: loginserver.cc
gameserver/network/: CMakeLists.txt
gameserver/network/export/: client_factory.h  connection.h  incoming_packet.h  incomingpacket.h  outgoing_packet.h  outgoingpacket.h  server.h  server_factory.h
gameserver/network/src/: acceptor.cc  acceptor.h  connection.cc  connection.h  connection_impl.h  emscripten_client_backend.cc  emscripten_client_backend.h  emscripten_client_factory.cc  error_code.h  incoming_packet.cc  incomingpacket.cc  outgoing_packet.cc  outgoingpacket.cc  server.cc  server_factory.cc  server_impl.cc  server_impl.h  websocket_server_impl.cc  websocket_server_impl.h  websocketpp_client_backend.cc  websocketpp_client_backend.h  websocketpp_client_factory.cc  websocketpp_server_backend.cc  websocketpp_server_backend.h
gameserver/network/test/: CMakeLists.txt  acceptor_test.cc  backend_mock.h  connection_test.cc  packet_test.cc  server_test.cc
gameserver/protocol/: CMakeLists.txt
gameserver/protocol/export/: protocol.h  protocol_71.h  protocol_client.h  protocol_common.h  protocol_helper.h  protocol_server.h  protocol_types.h
gameserver/protocol/src/: protocol.cc  protocol_71.cc  protocol_client.cc  protocol_common.cc  protocol_helper.cc  protocol_server.cc
gameserver/replayclient/: CMakeLists.txt
gameserver/replayclient/src/: bitmap_font.cc  bitmap_font.h  chat.cc  chat_ui.cc  chat_ui.h  common_ui.cc  common_ui.h  game.cc  game.h  game_ui.cc  game_ui.h  main_ui.cc  main_ui.h  player_info.h  protocol.cc  protocol.h  replay_client.cc  replay_reader.cc  sidebar_ui.cc  sprite_loader.h  texture.cc  tiles.cc  tiles.h  types.h
gameserver/replayclient/test/: CMakeLists.txt
gameserver/replayserver/: CMakeLists.txt
gameserver/replayserver/src/: replay_connection.cc  replay_connection.h  replay_reader.cc  replay_reader.h  replayserver.cc
gameserver/utils/: CMakeLists.txt
gameserver/utils/export/: config_parser.h  configparser.h  data_loader.h  file_reader.h  logger.h  taskqueue.h  taskqueuefactory.h  tick.h
gameserver/utils/src/: data_loader.cc  logger.cc  taskqueuefactory.cc  taskqueueimpl.cc  taskqueueimpl.h  tick.cc
gameserver/utils/test/: CMakeLists.txt  configparser_test.cc
gameserver/utils/test_export/: stub_logger.cc  stub_tick.cc
gameserver/world/: CMakeLists.txt
gameserver/world/export/: creature.h  creature_ctrl.h  creaturectrl.h  direction.h  item.h  itemfactory.h  npcctrl.h  position.h  thing.h  tile.h  world.h  world_factory.h  world_interface.h  worldfactory.h  worldinterface.h
gameserver/world/src/: constants.h  creature.cc  item.cc  item_factory.cc  item_manager.cc  itemfactory.cc  position.cc  tile.cc  world.cc  world_factory.cc  worldfactory.cc
gameserver/world/test/: CMakeLists.txt  creature_test.cc  item_test.cc  position_test.cc  tile_test.cc  world_test.cc
gameserver/worldserver/: CMakeLists.txt
gameserver/worldserver/src/: connection_ctrl.cc  connection_ctrl.h  container_manager.h  gameengine.cc  gameengine.h  gameengineproxy.h  player.cc  player.h  player_ctrl.h  player_manager.cc  player_manager.h  playerctrl.cc  playerctrl.h  protocol.h  protocol_71.cc  protocol_71.h  protocol_position.h  taskqueue.h  world_task_queue.cc  worldserver.cc  worldtaskqueue.cc  worldtaskqueue.h
gameserver/worldtypes/: CMakeLists.txt
gameserver/worldtypes/export/: creature.h  direction.h  item.h  position.h  thing.h
gameserver/wsclient/: CMakeLists.txt
gameserver/wsclient/src/: console.cc  console.h  creature.h  file_reader.h  game.h  graphics.cc  graphics.h  item_types.cc  item_types.h  itemtexture.h  itemview.cc  main_ui.cc  main_ui.h  map.cc  map.h  network.cc  network.h  network_linux.cc  player_info.h  protocol.cc  protocol.h  replay_client.cc  replay_reader.cc  replay_reader.h  sprite_loader.cc  sprite_loader.h  texture.cc  texture.h  tiles.cc  tiles.h  types.h  ui_game.cc  ui_game.h  ui_widget.h  widget.h  wsclient.cc  wsworld.cc  wsworld.h
gameserver/wsclient/test/: CMakeLists.txt
(+177 files in other folders)
